flowc/tests/fixtures/lex_e101_non_ascii.flow
é
flow gate(a: bool) -> bool {
  a
}
